--- a/TWRailway.Repository/TWRailway.Repository.csproj
+++ b/TWRailway.Repository/TWRailway.Repository.csproj
@@ -8,4 +8,9 @@
     <ProjectReference Include="..\TWRailway.Common\TWRailway.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Implements\" />
+  </ItemGroup>
+
 </Project>
