--- a/TWRailway.Repository/TWRailway.Repository.csproj
+++ b/TWRailway.Repository/TWRailway.Repository.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="NEST" Version="7.9.0" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
   </ItemGroup>
 
 </Project>
